docker/kubenetes/service/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - paths: /
        backend:
          serviceName: kubia-nodeport
          servicePort: 80
